--- a/index.html
+++ b/index.html
@@ -1,1 +1,75 @@
-<h1>index.html</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Українські міста та їх координати</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCen4VCmdGW3HQce7BcgqnY9DEPOB7cn6k"> </script>
+    <script src="fuzzaldrin-plus.js"></script>
+
+    <script src="cities_uk.js"></script>
+
+    <script src="app.js"></script>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="main.css">
+</head>
+<body ng-app="ukr_cities">
+
+<div class="container-fluid" ng-controller="mainCtrl">
+    <div class="row content">
+
+        <div class="panel panel-default">
+            <div class="panel-body center">
+                <h1>Список українських міст та їх координати</h1>
+            </div>
+        </div>
+    </div>
+    <div class="row content">
+        <div class="col-sm-4 sidenav">
+            <h4>Пошук міста</h4>
+            <div class="input-group">
+                <input type="text" class="form-control" ng-change="goSearch()" ng-model="search" placeholder="Назва міста або населенного пункту..">
+                <span class="input-group-btn">
+                  <button ng-click="clearSearch()" class="btn btn-default" type="button">
+                    <span class="glyphicon glyphicon-remove"></span>
+                  </button>
+                </span>
+            </div>
+            <div class="search-result" ng-if = "result && result.length > 0 ">
+                <h4>Результати пошуку</h4>
+                <div class="list-group result-container" >
+                    <a href="" class="list-group-item" ng-repeat="item in result" ng-click="goToCity(item)">
+                        <h5 class="list-group-item-heading"><b>{{item.city}}</b></h5>
+                        <p class="list-group-item-text">{{item.district}} <small>{{item.region}}<br>
+                        широта:{{item.lat}}, довгота:{{item.lng}}<br>
+                        широта:{{item.latg}}, довгота:{{item.lngg}}<br>
+                        </small>
+                        </p>
+                    </a>
+                </div>
+            </div>
+            <div class="result-count-container" ng-if = "result && result.length > 0 ">
+                Знайдено результатів {{result.length==200 ? "більше за 200" : result.length}}
+                <p class="save-container" ng-click="saveResults()">
+                    Завантажити результати пошуку
+                </p>
+            </div>
+            <div class="result-count-container" ng-if = "!result || result.length == 0 ">
+                <p class="save-container" ng-click="saveAll()">
+                    Завантажити всі міста
+                </p>
+            </div>
+        </div>
+
+        <div class="col-sm-8">
+            <div id="map" style="height: 700px"></div>
+        </div>
+    </div>
+</div>
+
+</body>
+</html>
